--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,3 +1,8 @@
+.about-container {
+    margin-top: 120px;
+    background-color: blue;
+}
+
 .site-layout-content {
     min-height: 280px;
     padding: 24px;
@@ -15,4 +20,46 @@
 .ant-row-rtl #components-layout-demo-top .logo {
     float: right;
     margin: 16px 0 16px 24px;
+}
+
+.logo {
+    background-image: "../../assets";
+}
+
+.name-title {
+    margin-left: 1%;
+    align-self: flex-end;
+    font-weight: 700;
+    font-family: Ubuntu;
+    font-size: 30px;
+}
+
+.header {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100px;
+    background-color: #e7f2fd;
+    flex-direction: row;
+    display: flex;
+}
+
+.menu-container {
+    font-family: Ubuntu;
+    display: flex;
+    align-self: flex-end;
+    margin-left: 10%;
+    background-color: #e7f2fd;
+}
+
+.menu-text {
+    font-size: 20px;
+    font-weight: 700;
+    background-color: #e7f2fd;
+}
+
+.project-container {
+    padding: 50px;
+    margin-top: 64;
+    background-color: #3a95f1;
 }
